fix zoom in on mobile view when typing in input

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 * {
   font-family: 'Poppins', sans-serif;
+  font-size: 16px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -12,7 +13,6 @@
   background-color: #664f9f;
   color: #fff;
 }
-
 
 body {
   background: #3d3d73;
@@ -151,10 +151,9 @@ h1 {
   gap: 0.8rem;
 }
 
-/* Confirm Delete Modal Styles */
 .confirm-delete {
   position: absolute;
-  right: -160px;
+  right: -165px;
   top: 50%;
   transform: translateY(-50%);
   background: #202046;
@@ -163,12 +162,13 @@ h1 {
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   z-index: 1000;
-  width: 140px;
+  width: 145px;
   font-size: 0.8rem;
 }
 
 .confirm-delete-text {
   margin-bottom: 0.5rem;
+  font-size: 14px;
 }
 
 .confirm-delete-buttons {
